metadata/force-app/main/default/objects/DoA_Setting__c/DoA_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>BODEV-76: Custom Setting to store thresholds and approver user IDs for Delegation of Authority (DoA)</description>
    <label>DoA Setting</label>
</CustomObject>