metadata/force-app/main/default/objects/DoA_Setting__c/fields/Contract_Renewal_Term_COO__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Term_COO__c</fullName>
    <label>Contract Renewal Term: COO</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>