metadata/force-app/main/default/objects/DoA_Setting__c/fields/Contraction_Percent_COO__c.field-meta.xml
<CustomField>
    <fullName>Contraction_Percent_COO__c</fullName>
    <defaultValue>10</defaultValue>
    <description>BODEV-673: Contraction % agains the total ARR below which Sales Manager or COO can approve.</description>
    <label>Contraction Percent: COO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>