metadata/force-app/main/default/objects/DoA_Setting__c/fields/Contraction_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contraction_Sales_Manager__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>BODEV-673: Amount threshold for Contraction below which Sales Manager can approve. Amount indicated for USD/EUR/GBP. For other currencies, it should be converted to the local currency.</description>
    <label>Contraction: Sales Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>