metadata/force-app/main/default/objects/DoA_Setting__c/fields/DoA_Approver_COO__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver_COO__c</fullName>
    <description>BODEV-76: User ID of DoA Approver for COO level.
BODEV-2982: COO-level approval split b/w CRO (New Biz) and CCO (Renewal/Upsell). This field is repurposed to capture CCO User ID.</description>
    <label>DoA Approver: COO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>