metadata/force-app/main/default/objects/DoA_Setting__c/fields/DoA_Approver_CRO__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver_CRO__c</fullName>
    <description>BODEV-2982: COO-level approval split b/w CRO (New Biz) and CCO (Renewal/Upsell). User ID of DoA Approver for CRO level.</description>
    <label>DoA Approver: CRO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>