metadata/force-app/main/default/objects/DoA_Setting__c/fields/DoA_Approver_Pricing_Committee__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver_Pricing_Committee__c</fullName>
    <description>BODEV-76: User ID of DoA Approver for Pricing Committee level.</description>
    <label>DoA Approver: Pricing Committee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>