metadata/force-app/main/default/objects/DoA_Setting__c/fields/DoA_Approver_Sales_Manager_EMEA__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver_Sales_Manager_EMEA__c</fullName>
    <label>DoA Approver: Sales Manager EMEA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>