metadata/force-app/main/default/objects/DoA_Setting__c/fields/DoA_Approver_VP_of_CS_EMEA__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver_VP_of_CS_EMEA__c</fullName>
    <description>BODEV-76: User ID of DoA Approver for VP of CS level in EMEA region.</description>
    <label>DoA Approver: VP of CS EMEA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>