metadata/force-app/main/default/objects/DoA_Setting__c/fields/Email_COO__c.field-meta.xml
<CustomField>
    <fullName>Email_COO__c</fullName>
    <description>BODEV-76: Email of COO to be used in notification action in the flow.
BODEV-2982: COO-level approval split b/w CRO (New Biz) and CCO (Renewal/Upsell). This field is repurposed to capture CCO email.</description>
    <label>Email: COO</label>
    <type>Email</type>
</CustomField>