metadata/force-app/main/default/objects/DoA_Setting__c/fields/Email_CRO__c.field-meta.xml
<CustomField>
    <fullName>Email_CRO__c</fullName>
    <description>BODEV-2982: COO-level approval split b/w CRO (New Biz) and CCO (Renewal/Upsell). Email of CRO to be used in notification action in the flow.</description>
    <label>Email: CRO</label>
    <type>Email</type>
</CustomField>