metadata/force-app/main/default/objects/DoA_Setting__c/fields/Email_Sales_Manager_US__c.field-meta.xml
<CustomField>
    <fullName>Email_Sales_Manager_US__c</fullName>
    <label>Email: Sales Manager US</label>
    <type>Email</type>
</CustomField>