metadata/force-app/main/default/objects/DoA_Setting__c/fields/Email_VP_of_CS_US__c.field-meta.xml
<CustomField>
    <fullName>Email_VP_of_CS_US__c</fullName>
    <description>BODEV-76: Email of VP CS of US to be used in notification action in the flow.</description>
    <label>Email: VP of CS US</label>
    <type>Email</type>
</CustomField>