metadata/force-app/main/default/objects/DoA_Setting__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <description>BODEV-76: URL of the SFDC instance. Used in Email template for DoA Approval Request</description>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>