metadata/force-app/main/default/objects/DoA_Setting__c/fields/Invoice_Period_COO__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_COO__c</fullName>
    <description>BODEV-76: Invoice Period above which COO can approve.</description>
    <label>Invoice Period: COO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>