metadata/force-app/main/default/objects/DoA_Setting__c/fields/Invoice_Period_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_Sales_Rep__c</fullName>
    <description>BODEV-76: Invoice Period above which approval is not required.</description>
    <label>Invoice Period: Sales Rep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>