metadata/force-app/main/default/objects/DoA_Setting__c/fields/MRR_Discount_COO__c.field-meta.xml
<CustomField>
    <fullName>MRR_Discount_COO__c</fullName>
    <description>BODEV-76: MRR discount threshold below which COO can approve.</description>
    <label>MRR Discount: COO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>