metadata/force-app/main/default/objects/DoA_Setting__c/fields/MRR_Discount_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>MRR_Discount_Sales_Manager__c</fullName>
    <defaultValue>25</defaultValue>
    <description>BODEV-76: MRR discount threshold below which Sales Manager can approve.</description>
    <label>MRR Discount: Sales Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>