metadata/force-app/main/default/objects/DoA_Setting__c/fields/MRR_Discount_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>MRR_Discount_Sales_Rep__c</fullName>
    <description>BODEV-76: MRR discount threshold below approval is not required.</description>
    <label>MRR Discount: Sales Rep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>