metadata/force-app/main/default/objects/DoA_Setting__c/fields/One_off_Discount_COO__c.field-meta.xml
<CustomField>
    <fullName>One_off_Discount_COO__c</fullName>
    <description>BODEV-76: One-off discount threshold below which COO can approve.</description>
    <label>One-off Discount: COO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>