metadata/force-app/main/default/objects/DoA_Setting__c/fields/One_off_Discount_VP_of_CS__c.field-meta.xml
<CustomField>
    <fullName>One_off_Discount_VP_of_CS__c</fullName>
    <description>BODEV-76: One-off discount threshold below which VP of Customer Success can approve.
BODEV-683: Renamed from One-off Discount: VP of CS to One-off Discount: Sales Manager.</description>
    <label>One-off Discount: Sales Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>