metadata/force-app/main/default/objects/DoA_Setting__c/fields/Payment_Period_COO__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period_COO__c</fullName>
    <description>BODEV-76: Payment Period below which COO can approve</description>
    <label>Payment Period: COO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>