metadata/force-app/main/default/objects/DoA_Setting__c/fields/Payment_Period_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period_Sales_Manager__c</fullName>
    <description>BODEV-76: Payment Period below which Sales Manager can approve.</description>
    <label>Payment Period: Sales Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>