metadata/force-app/main/default/objects/DoA_Setting__c/fields/X3rd_Party_Product_Margin_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Product_Margin_Sales_Rep__c</fullName>
    <description>BODEV-76: 3rd party product margin threshold above which approval is not required.</description>
    <label>3rd Party Product Margin: Sales Rep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>